Use top-level values and occurrence identities